[tool.poetry]
name = "osmose"
version = "0.2.0"
description = "OSmOSE toolkit"
authors = ["OSmOSE team"]
readme = "README.md"
packages = [
    { include = "OSmOSE", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
soundfile = "0.12.1"
pandas = "^1.5.3"
coverage = "^7.0.5"
tqdm = "^4.64.1"
tomlkit = "^0.11.6"
matplotlib = "^3.7.0"
tomli = "^2.0.1"
numpy = "^1.24.2"
scipy = {version = "^1.10.1", python = ">=3.10,<3.12"}
termcolor = "^2.2.0"
filelock = "^3.10.2"
seaborn = "^0.12.2"
netcdf4 = "^1.6.4"
pykdtree = "^1.3.9"
cdsapi = "^0.6.1"
librosa = "^0.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "unit: Mark test as unitary test. Run only these with '-m unit'.",
    "integ: Mark test as integration test. Run only these with '-m integ'.",
    "reg: Mark test as regression test. Run only these with '-m ref'."
]
